--- a/src/Web/SunNext.Web/Views/SolarAsset/All.cshtml
+++ b/src/Web/SunNext.Web/Views/SolarAsset/All.cshtml
@@ -12,7 +12,7 @@
 <div class="container-fluid py-5">
     <div class="text-center mb-4">
         <h2 class="fw-bold text-white">🔧 Solar Assets Administration</h2>
-        <p class="">Manage all solar assets including deleted ones</p>
+        <p class="">Manage all solar assets.</p>
     </div>
 
     <form method="get" class="mb-4">
@@ -119,7 +119,7 @@
                                 }
                                 else if (asset.IsOnline)
                                 {
-                                    <span class="badge bg-success">Normal</span>
+                                    <span class="badge bg-success">Online</span>
                                 }
                                 else
                                 {
