--- a/src/Web/SunNext.Web/Views/SolarAsset/Details.cshtml
+++ b/src/Web/SunNext.Web/Views/SolarAsset/Details.cshtml
@@ -27,12 +27,11 @@
         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-warning">
             <i class="bi bi-pencil-square"></i> Edit Asset
         </a>
-        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-danger"
-           onclick="return confirm('Are you sure you want to delete this solar asset?')">
+        <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
             <i class="bi bi-trash"></i> Delete Asset
-        </a>
+        </button>
     </div>
-
+    
     <!-- Metrics Grid -->
     <div class="metric-grid fade-in">
         <div class="metric-card">
@@ -231,6 +230,26 @@
                         <i class="bi bi-info-circle tooltip-icon" data-bs-toggle="tooltip"
                            title="Local time zone for this installation"></i>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-dark text-white border-0">
+                <div class="modal-header border-0">
+                    <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete asset <strong>@Model.Name</strong>?
+                </div>
+                <div class="modal-footer border-0">
+                    <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
+                        <button type="submit" class="btn btn-danger">Yes, Delete</button>
+                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                    </form>
                 </div>
             </div>
         </div>
