--- a/src/Web/SunNext.Web/wwwroot/css/site.css
+++ b/src/Web/SunNext.Web/wwwroot/css/site.css
@@ -398,6 +398,12 @@ header {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+.dropdown-item:hover,
+.dropdown-item:focus {
+    background-color: rgba(13, 202, 240, 0.1);
+    color: #0dcaf0 !important;
+}
+
 .asset-title {
     font-size: 2.5rem;
     font-weight: 300;
